# gpu-trace-validator

./: AGENTS.md  CHANGELOG.md  README.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml  release-artifacts.yml
docs/brand/: README.md
examples/: demo.py
src/gpu_trace_validator/: __init__.py  cli.py  validator.py
src/gpu_trace_validator/schemas/: gpu_trace.schema.json
tests/: test_gpu_trace_validator.py
tests/fixtures/: trace_fail.json  trace_pass.json
