[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "gpu-trace-validator"
version = "0.1.0"
description = "Validate GPU trace JSON fixtures with schema checks and compact assertion summaries."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["gpu", "trace", "validator", "jsonschema", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
dependencies = ["jsonschema>=4.22"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
gpu-trace-validator = "gpu_trace_validator.cli:main"

[project.urls]
Homepage = "https://github.com/HarperZ9/gpu-trace-validator"
Repository = "https://github.com/HarperZ9/gpu-trace-validator"
Issues = "https://github.com/HarperZ9/gpu-trace-validator/issues"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
